# teloxide

examples/dialogue_bot_functional/: Cargo.toml
examples/dialogue_bot_functional/src/: main.rs
src/: prelude.rs
src/dispatching/: mod.rs  update_listeners.rs
